# helloworld_azure

./: Dockerfile  Dockerfile.dev  pyproject.toml
.github/workflows/: deploy.yml
quizapp/: main.py
