[tool.poetry]
name = "quizapp"
version = "0.1.0"
description = ""
authors = ["muneeb <muneebxhasan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
sqlmodel = "^0.0.16"
uvicorn = "^0.30.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
